--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,18 @@
 steps:
   - name: 'hashicorp/terraform:latest'
-    entrypoint: "sh"
+    entrypoint: 'sh'
     args:
       - 'c'
       - 'terraform init'
       
   - name: 'hashicorp/terraform:latest'
-    entrypoint: "sh"
+    entrypoint: 'sh'
     args:
       - 'c'
       - 'terraform plan'
 
   - name: 'hashicorp/terraform:latest'
-    entrypoint: "sh"
+    entrypoint: 'sh'
     args:
       - 'c'
       - 'terraform apply'
