--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,8 +4,9 @@ steps:
     args:
       
       - |
+          cd source/terraform
           terraform init
-          terraform plan'
+          terraform plan
           terraform apply -auto-approve
       
   
