--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
+  - name: 'gcr.io/cloud-builders/git'
+
   - name: 'hashicorp/terraform:latest'
-    entrypoint: '/bin/sh'
+    entrypoint: 'sh'
     args:
       
       - |
