--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,11 +8,11 @@ steps:
   - name: hashicorp/terraform:latest
     entrypoint: bash
   - name: terraform init
-    run: terraform init
+   
   - name: terraform plan
-    run: terraform plan
-  - name: terraform apply
-    run: terraform apply -auto-approve
+    
+  - name: terraform apply -auto-approve
+    
     
       
   
