--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,17 @@ steps:
       - clone
       - https://github.com/Srinivas922023/gcp.git
       - source
-  - name: hashicorp/terraform:latest
+  - name: hashicorp/terraform:1.0.0'
     entrypoint: bash
+    
+    steps:
+  - id: 'terraform init'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform init
+  - id: 'terraform plan'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform plan
+  - id: 'terraform apply'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform apply --auto-approve
   
