--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,15 @@
     steps:
   - name: gcr.io/cloud-builders/git
+    entrypoint: 'sh'
     steps:
   - id: 'terraform init'
     name: 'hashicorp/terraform:1.0.0'
-    script: terraform init
+    entrypoint: 'sh'
+    args: terraform init
+    
   - id: 'terraform plan'
     name: 'hashicorp/terraform:1.0.0'
-    script: terraform plan
+    
   - id: 'terraform apply'
     name: 'hashicorp/terraform:1.0.0'
     script: terraform apply --auto-approve
