--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
-- id: 'tf apply'
-  name: 'hashicorp/terraform:1.0.0'
-  entrypoint: 'sh'
-  args: 
-  - '-c'
-  - | 
-        terraform apply -auto-approve
-     
+---
+- id: tf apply
+  name: hashicorp/terraform:latest
+  entrypoint: sh
+  args:
+    - -c
+    - |
+      terraform apply -auto-approve     
   
