--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,13 @@
----
-- id: tf apply
-  name: hashicorp/terraform:latest
-  entrypoint: sh
-  args:
-    - -c
-    - |
-      terraform apply -auto-approve     
+# cloudbuild.yaml
+
+steps:
+  - id: 'terraform init'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform init
+  - id: 'terraform plan'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform plan
+  - id: 'terraform apply'
+    name: 'hashicorp/terraform:1.0.0'
+    script: terraform apply --auto-approve   
   
